--- a/Editor/Editor.vcxproj.filters
+++ b/Editor/Editor.vcxproj.filters
@@ -18,4 +18,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Shaders\Basic.glsl" />
+  </ItemGroup>
 </Project>
