Multiple Changes (see description)
• Entities (class) now be created via EntityRegistry
• Entity class now handles immediate Transform component addition
• Fixed Entity templating issues
• EntityRegistry *temporarily* available in Application for debugging purposes
• Transform component modification functions added
• WorldCamera now functional and can now be given a position and rotation
• Camera no longer requires cached position and rotation or a ViewMatrix recalculation helper function
• Moved quad drawing code into Renderer (for now)
• BeginFrame command now takes in a Camera for its view projection matrix

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -112,6 +112,9 @@
     <ClCompile Include="Source\ECS\EntityRegistry.cpp">
       <Filter>ECS</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ECS\Transform.cpp">
+      <Filter>ECS</Filter>
+    </ClCompile>
     <ClCompile Include="Source\Renderer\Camera.cpp">
       <Filter>Renderer</Filter>
     </ClCompile>
