--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Source\ECS\Component.cpp" />
     <ClCompile Include="Source\ECS\Entity.cpp" />
     <ClCompile Include="Source\ECS\EntityRegistry.cpp" />
+    <ClCompile Include="Source\ECS\Transform.cpp" />
     <ClCompile Include="Source\Renderer\Camera.cpp" />
     <ClCompile Include="Source\Renderer\IndexBuffer.cpp" />
     <ClCompile Include="Source\Renderer\RenderContext.cpp" />
