Implemented basic Viewport panel and moved EditorCamera into Viewport

--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -93,6 +93,8 @@
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Editor.h" />
+    <ClInclude Include="Source\Panels\EditorPanel.h" />
+    <ClInclude Include="Source\Panels\Viewport.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
@@ -105,4 +107,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
