--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="Source\ECS\Component.h" />
     <ClInclude Include="Source\ECS\Entity.h" />
     <ClInclude Include="Source\ECS\EntityRegistry.h" />
+    <ClInclude Include="Source\ECS\MeshRenderer.h" />
     <ClInclude Include="Source\ECS\Transform.h" />
     <ClInclude Include="Source\ECS\WorldCamera.h" />
     <ClInclude Include="Source\EntryPoint.h" />
@@ -144,6 +145,7 @@
     <ClCompile Include="Source\ECS\Component.cpp" />
     <ClCompile Include="Source\ECS\Entity.cpp" />
     <ClCompile Include="Source\ECS\EntityRegistry.cpp" />
+    <ClCompile Include="Source\ECS\MeshRenderer.cpp" />
     <ClCompile Include="Source\ECS\Transform.cpp" />
     <ClCompile Include="Source\ImGui\ImGuiGLFW.cpp" />
     <ClCompile Include="Source\ImGui\ImGuiLayer.cpp" />
