--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Source\ECS\EntityRegistry.h">
       <Filter>ECS</Filter>
     </ClInclude>
+    <ClInclude Include="Source\ECS\MeshRenderer.h">
+      <Filter>ECS</Filter>
+    </ClInclude>
     <ClInclude Include="Source\ECS\Transform.h">
       <Filter>ECS</Filter>
     </ClInclude>
@@ -152,6 +155,9 @@
       <Filter>ECS</Filter>
     </ClCompile>
     <ClCompile Include="Source\ECS\EntityRegistry.cpp">
+      <Filter>ECS</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ECS\MeshRenderer.cpp">
       <Filter>ECS</Filter>
     </ClCompile>
     <ClCompile Include="Source\ECS\Transform.cpp">
